<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nt_container_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_agendor">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nt_lbl_titulo"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nt_btn_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:text="@string/nt_btn_agendar"
        android:textColor="@color/azul_agendor"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nt_container_frm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittxt_borda"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/nt_btn_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/nt_lbl_cliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/lbl_cliente"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nt_edt_data"
            app:drawableLeftCompat="@drawable/ic_users" />

        <TextView
            android:id="@+id/nt_lbl_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/lbl_quando"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nt_img_btn_email"
            app:drawableLeftCompat="@drawable/ic_time" />

        <EditText
            android:id="@+id/nt_edt_hora"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:background="@color/azul_bg_inputs"
            android:ems="10"
            android:hint="@string/horario"
            android:inputType="time"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nt_edt_data"
            app:layout_constraintTop_toBottomOf="@+id/nt_lbl_data" />

        <EditText
            android:id="@+id/nt_edt_data"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:autofillHints=""
            android:background="@color/azul_bg_inputs"
            android:drawableEnd="@drawable/ic_calendario"
            android:drawableRight="@drawable/ic_calendario"
            android:ems="10"
            android:hint="@string/data"
            android:inputType="date"
            android:nextFocusLeft="@id/nt_edt_hora"
            android:nextFocusRight="@id/nt_edt_hora"
            android:nextFocusUp="@id/nt_edt_hora"
            android:nextFocusDown="@id/nt_edt_hora"
            android:nextFocusForward="@id/nt_edt_hora"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/nt_edt_hora"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nt_lbl_data" />

        <EditText
            android:id="@+id/nt_edt_cliente"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="47dp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:background="@color/azul_bg_inputs"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textColorLink="@color/azul_agendor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nt_lbl_cliente" />

        <EditText
            android:id="@+id/nt_edt_descricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/azul_bg_inputs"
            android:ems="10"
            android:hint="@string/escreva"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="4"
            android:onClick="saveData"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:shadowColor="#000000"
            android:textColorLink="@color/azul_agendor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nt_level_descricao"
            app:layout_constraintTop_toBottomOf="@+id/nt_edt_cliente" />

        <ImageButton
            android:id="@+id/nt_img_btn_email"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/borda_redonda"
            android:contentDescription="@string/lbl_emails"
            android:focusableInTouchMode="false"
            app:layout_constraintEnd_toStartOf="@+id/nt_img_btn_telefone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_mail" />

        <ImageButton
            android:id="@+id/nt_img_btn_telefone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/borda_redonda"
            android:contentDescription="@string/lbl_ligacao"
            app:layout_constraintEnd_toStartOf="@+id/nt_img_btn_documento"
            app:layout_constraintStart_toEndOf="@+id/nt_img_btn_email"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_telefone"/>

        <ImageButton
            android:id="@+id/nt_img_btn_documento"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/borda_redonda"
            android:contentDescription="@string/lbl_proposta"
            app:layout_constraintEnd_toStartOf="@+id/nt_img_btn_negociacao"
            app:layout_constraintStart_toEndOf="@+id/nt_img_btn_telefone"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_documento" />

        <ImageButton
            android:id="@+id/nt_img_btn_negociacao"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/borda_redonda"
            android:contentDescription="@string/lbl_reuniao"
            app:layout_constraintEnd_toStartOf="@+id/nt_img_btn_localizacao"
            app:layout_constraintStart_toEndOf="@+id/nt_img_btn_documento"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_maleta" />

        <ImageButton
            android:id="@+id/nt_img_btn_localizacao"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/borda_redonda"
            android:contentDescription="@string/lbl_visita"
            app:layout_constraintEnd_toStartOf="@+id/nt_img_btn_mais"
            app:layout_constraintStart_toEndOf="@+id/nt_img_btn_negociacao"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_location" />

        <ImageButton
            android:id="@+id/nt_img_btn_mais"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/borda_redonda"
            android:contentDescription="@string/lbl_outro"
            app:srcCompat="@drawable/ic_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nt_img_btn_localizacao"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_more" />

        <TextView
            android:id="@+id/nt_level_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nt_edt_descricao"
            app:drawableLeftCompat="@drawable/ic_texto" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>